ZOLLAK2-240 changed kafka connect version to 3.5
- removed confluent dependencies, which aren't needed anymore because the kafka config system got reintegrated in the open source distribution